--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -6,17 +6,14 @@
     # The license for your mod. This is mandatory and allows for easier comprehension of your redistributive properties.
     # Review your options at https://choosealicense.com/. All rights reserved is the default copyright stance, and is thus the default here.
     license="GNU GPLv3"
-    # A URL to refer people to when problems occur with this mod
-    issueTrackerURL="github.com/MinecraftForge/MinecraftForge/issues"
     # If the mods defined in this file should show as separate resource packs
     showAsResourcePack=false
 
     [[mods]]
       modId="wynn"
       version="1.0"
-      displayName="WYnnclone"
-      credits=""
+      displayName="Wynnclone"
+      credits="Wynncraft"
       authors="IminhaK"
       description='''
-      Lets you craft dirt into diamonds. This is a traditional mod that has existed for eons. It is ancient. The holy Notch created it. Jeb rainbowfied it. Dinnerbone made it upside down. Etc.
-      '''
+      Recreation of the server Wynncraft's functions, as a singleplayer mod'''
